<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_export"
        android:icon="@drawable/ic_save"
        android:title="@string/export_notes"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sort"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/sort"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_todo"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/todo"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_ocr"
        android:icon="@android:drawable/ic_menu_camera"
        android:title="@string/ocr"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_sticky_note"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/sticky_note"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_voice_search"
        android:icon="@android:drawable/ic_btn_speak_now"
        android:title="@string/voice_search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_backup"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/backup"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_restore"
        android:icon="@android:drawable/ic_menu_revert"
        android:title="@string/restore"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:title="@string/logout"
        app:showAsAction="never" />
</menu>

